syntax= 'proto3';

import 'google/protobuf/empty.proto';

package artist;

service ArtistService {
  rpc GetAllArtists (google.protobuf.Empty) returns (GetAllArtistsResponse) {}
}

message GetAllArtistsResponse {
  repeated Artist artists = 1;
}

message Artist {
  string _id = 1;
  string name = 2;
  string imgPath = 3;
  string type = 4;
}